force-app/main/default/objects/Voucher__c/Voucher__c.object-meta.xml
<CustomObject>
    <description>Used for recording vouchers issued to families/volunteers</description>
    <label>Voucher</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Voucher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vouchers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>