force-app/main/default/objects/Voucher__c/fields/Appeal_Code__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Code__c</fullName>
    <label>Appeal Code</label>
    <type>TextArea</type>
</CustomField>