force-app/main/default/objects/Voucher__c/fields/Cash_Value__c.field-meta.xml
<CustomField>
    <fullName>Cash_Value__c</fullName>
    <label>Cash Value</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>