force-app/main/default/objects/Voucher__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <inlineHelpText>Date voucher expires.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>