force-app/main/default/objects/Voucher__c/fields/Fundraising_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Branch_Code__c</fullName>
    <label>Fundraising Branch Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Head Office</fullName>
            </value>
            <value>
                <fullName>13 - Sydney SYD</fullName>
            </value>
            <value>
                <fullName>31 - Melbourne VIC</fullName>
            </value>
            <value>
                <fullName>41 - Brisbane SQLD</fullName>
            </value>
            <value>
                <fullName>51 - Adelaide SA</fullName>
            </value>
            <value>
                <fullName>71 - Hobart TAS</fullName>
            </value>
            <value>
                <fullName>81 - Perth WA</fullName>
            </value>
            <value>
                <fullName>91 - Darwin NT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>