force-app/main/default/objects/Voucher__c/fields/Related_Retreat_Booking__c.field-meta.xml
<CustomField>
    <fullName>Related_Retreat_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retreat Booking</label>
    <referenceTo>Retreat_Booking__c</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>