force-app/main/default/objects/Voucher__c/fields/SubCode__c.field-meta.xml
<CustomField>
    <fullName>SubCode__c</fullName>
    <label>SubCode</label>
    <type>TextArea</type>
</CustomField>