force-app/main/default/objects/Voucher__c/fields/Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number__c</fullName>
    <inlineHelpText>Voucher number/Serial Number for reporting purposes</inlineHelpText>
    <label>Voucher Number</label>
    <type>TextArea</type>
</CustomField>